AC_INIT([opentmf-utils], [0.1], [reinderfeenstra@gmail.com], [opentmf-utils], [http://github.com/opentmf/opentmf-utils])
AC_CONFIG_AUX_DIR([config])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_SRCDIR([src/lsopentmf.c])

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_CC_STDC

AC_CONFIG_FILES( \
  Makefile \
  src/Makefile
)

AC_OUTPUT
